--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "react-plot-axis-panel",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "memoize": "github:zhoulytwinyu/memoize",
-    "plot-utils": "github:zhoulytwinyu/plot-utils",
+    "plot-utils": "github:zhoulytwinyu/plot-utils"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "gh-pages": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.0.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dist": "export NODE_ENV=production && rm -rf dist && mkdir dist && npx babel src/lib --out-dir dist --copy-files",
+    "test": "react-scripts build",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +55,16 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "react-router-dom": "^5.0.1"
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "homepage": "https://twisttrl.github.io/react-plot-axis-panel",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twisttrl/react-plot-axis-panel.git"
+  },
+  "author": "Lingyu Zhou",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/twisttrl/react-plot-axis-panel/issues"
   }
 }
