--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "dependencies": {
     "memoize": "github:zhoulytwinyu/memoize#v0.1.0",
-    "plot-utils": "github:zhoulytwinyu/plot-utils#v0.1.0"
+    "plot-utils": "github:TwistTRL/plot-utils",
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
